# ws2812-controller

./: .gitattributes  .gitignore
common/: environment.mk  rules.mk
common/make_modules/: avr.mk  cog.mk
common/variants/: embedded.environment.mk  embedded.rules.mk  test.environment.mk  test.rules.mk
fw/: .cproject  .project  Makefile  main.cpp  system.cpp
fw/application/: common.hpp  core.cpp  core.hpp  root_screen.cpp  root_screen.hpp  screen_union.cpp  screen_union.hpp  settings.cpp  settings.hpp  text.cpp  text.hpp  translation.hpp
fw/device/: keypad.cpp  keypad.hpp  lcd.cpp  lcd.hpp  led_controller.cpp  led_controller.hpp  output.cpp  output.hpp  time_service.cpp  time_service.hpp
fw/system/: clock.cpp  clock.hpp  common.hpp  control.cpp  control.hpp  core.cpp  core.hpp  display_object.cpp  display_object.hpp  draw_context.cpp  draw_context.hpp  event_queue.cpp  event_queue.hpp  frame_buffer.cpp  frame_buffer.hpp  input.cpp  input.hpp  led_strip.cpp  led_strip.hpp  output.cpp  output.hpp
fw/tools/: button_filter.cpp  button_filter.hpp  generic_queue.cpp  generic_queue.hpp  queue.cpp  queue.hpp  timer.cpp  timer.hpp
fw/visual/: animation.cpp  animation.hpp  common.hpp  led_chain.cpp  led_chain.hpp
hw/: .gitignore
hw/control/: control-cache.lib  control.kicad_pcb  control.kicad_pro  control.kicad_sch  control.pro  control.sch  (+18 more)
sw/: .gitignore  dt-overlay.dts
sw/pico/: .gitignore  CMakeLists.txt  build.sh  main.cpp  status_led.cpp  status_led.hpp
test/: .cproject  .gitignore  .project  Makefile  common_main.cpp  enum_class.h  test_common.h
(+48 files in other folders)
